bpo-36205: Fix the rusage implementation of time.process_time() (GH-15538)